# snowflake-onboarding

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
01-platform-foundation-setup/: 01_platform_foundation.sql  02_platform_security.sql  03_platform_cost_management.sql
02-account-creation/: 01_account_provisioning.sql  02_account_security.sql  03_account_cost_management.sql
03-data-product-setup/: 01_data_product_planning.sql  02_core_roles_databases.sql  03_warehouse_access.sql  04_consumer_access.sql  05_cost_management.sql
articles/: cortex-code-python-testing.md
demo_run_debug/: __init__.py  debug_breakpoints_demo.py  simple_run.py  snowpark_demo.py  test_demo.py  test_show_output_demo.py
snowflake_pipeline/: dbt_project.yml
