[project]
name = "snowflake-onboarding"
version = "1.0.0"
description = "Snowflake onboarding demo with Cortex Code Desktop"
requires-python = ">=3.9"
dependencies = [
    "snowflake-snowpark-python>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["demo_run_debug"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires Snowflake connection)",
    "slow: Tests that take >5 seconds",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
timeout = 30

[tool.coverage.run]
source = ["demo_run_debug"]
omit = ["*/__pycache__/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
